# srotas

./: .gitignore  CLAUDE.md  RELEASE.txt  config.example.toml  pyproject.toml
.claude/skills/execute-issues/: SKILL.md
.claude/skills/generate-issues/: SKILL.md
.claude/skills/release-version/: SKILL.md
.claude/skills/upload-issues/: SKILL.md
collectors/: guardian.py
core/: __init__.py  config.py  events.py  init_memory.py  items.py  model.py
memory/: model.yaml
spec/: ARCHITECTURE.md  MISSION.md  ROADMAP.md  model-candidates.yaml  vision.md
spec/roadmap/implementation/: v0.1-execution-report.md  v0.1-github-report.md  v0.1-issues.md  v0.2-execution-report.md  v0.2-github-report.md  v0.2-issues.md  v0.3-issues.md
tests/: test_collect_cli.py  test_config.py  test_events.py  test_guardian.py  test_init_memory.py  test_items.py  test_model.py  test_model_yaml.py
